--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,10 @@
               "src/assets"
             ],
             
-            "scripts": []
+            "scripts": [],
+            "styles": [
+              "@angular/material/prebuilt-themes/purple-green.css"
+            ]
           }
         }
       }
